# ifc-write-test

./: .cproject  .gitignore  .project  BRepIfc.cpp  BRepIfc.h  IFCBuilder.cpp  IFCBuilder.h  IFCEngine.h  IFCEngine.lib  IFCExport.cpp  IFCExport.h  README.md  ReadMe.txt  StdAfx.cpp  baseIfc.cpp  baseIfc.h  baseIfcObject.cpp  baseIfcObject.h  boundingBoxIfc.cpp  boundingBoxIfc.h  extrudedPolygonIfc.cpp  extrudedPolygonIfc.h  miniExample.aps  miniExample.clw  miniExample.cpp  miniExample.dsp  miniExample.dsw  miniExample.h  miniExample.opt  miniExample.plg  miniExample.rc  miniExample.sln  miniExample.vcproj  miniExample.vcxproj  miniExampleDlg.cpp  miniExampleDlg.h  resource.h
IFCBuilder/: IFCBuilder.sln  IFCBuilder.vcxproj
res/: miniExample.rc2
src/: CDP_Building.cpp  CDP_Building.h  CDP_Building.hpp  CMakeLists.txt  IFCBuilder.cpp  IFCBuilder.h  IFCBuilderTest.cpp  IFCBuilderTest.h  IFCEngine.h  Point3d.cpp  Point3d.h  SimpleMesh.cpp  SimpleMesh.h  StdAfx.h  baseIfcObject.cpp  boundingBoxIfc.cpp  extrudedPolygonIfc.cpp
